[package]
name = "sc-subspace-chain-specs"
description = "Chain specification data structures tailored for Subspace"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
version = "0.1.0"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
]

[dependencies]
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3", default-features = false }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
serde = "1.0.147"
sp-core = { version = "7.0.0", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-runtime = { version = "7.0.0", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
