[package]
name = "subspace-fraud-proof"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace/"
description = "Subspace fraud proof utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", features = ["derive"] }
hash-db = "0.15.2"
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-core = { version = "7.0.0", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-domains = { version = "0.1.0", path = "../sp-domains" }
sp-runtime = { version = "7.0.0", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-state-machine = { version = "0.13.0", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-trie = { version = "7.0.0", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
subspace-wasm-tools = { version = "0.1.0", path = "../subspace-wasm-tools" }
tracing = "0.1.37"

[dev-dependencies]
domain-block-builder = { version = "0.1.0", path = "../../domains/client/block-builder" }
domain-runtime-primitives = { version = "0.1.0", path = "../../domains/primitives/runtime" }
domain-test-service = { version = "0.1.0", path = "../../domains/test/service" }
futures = "0.3.25"
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3", default-features = false }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3", default-features = false }
sp-domain-digests = { version = "0.1.0", path = "../../domains/primitives/digests" }
sp-keyring = { version = "7.0.0", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
substrate-test-utils = { version = "4.0.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
tempfile = "3.3.0"
tokio = "1.23.0"
