[package]
name = "subspace-service"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
description = "Subspace service."
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
derive_more = "0.99.17"
domain-runtime-primitives = { version = "0.1.0", path = "../../domains/primitives/runtime" }
either = "1.8.1"
frame-support = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
futures = "0.3.26"
jsonrpsee = { version = "0.16.2", features = ["server"] }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
parity-scale-codec = "3.4.0"
parking_lot = "0.12.1"
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-consensus-fraud-proof = { version = "0.1.0", path = "../sc-consensus-fraud-proof" }
sc-consensus-subspace = { version = "0.1.0", path = "../sc-consensus-subspace" }
sc-consensus-subspace-rpc = { version = "0.1.0", path = "../sc-consensus-subspace-rpc" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-rpc-spec-v2 = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a", default-features = false }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-tracing = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-consensus-subspace = { version = "0.1.0", path = "../sp-consensus-subspace" }
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-domains = { version = "0.1.0", path = "../sp-domains" }
sp-objects = { version = "0.1.0", path = "../sp-objects" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-runtime = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-trie = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
subspace-archiving = { version = "0.1.0", path = "../subspace-archiving" }
subspace-core-primitives = { version = "0.1.0", path = "../subspace-core-primitives" }
subspace-fraud-proof = { version = "0.1.0", path = "../subspace-fraud-proof" }
subspace-networking = { version = "0.1.0", path = "../subspace-networking" }
subspace-runtime-primitives = { version = "0.1.0", path = "../subspace-runtime-primitives" }
subspace-transaction-pool = { version = "0.1.0", path = "../subspace-transaction-pool" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["sync"] }
tracing = "0.1.37"

sp-session = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }

[features]
default = []
