[package]
name = "subspace-wasm-tools"
description = "Utilities for building WASM bundles"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
sc-executor-common = { version = "0.10.0-dev", git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-domains = { version = "0.1.0", path = "../sp-domains" }
