[package]
description = "Integration tests for Substrate network protocol"
name = "sc-network-test"
version = "0.8.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.64"
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network-light = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
log = "0.4.17"
parking_lot = "0.12.1"
futures = "0.3.26"
futures-timer = "3.0.1"
rand = "0.8.5"
libp2p = { version = "0.50.0", default-features = false }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-runtime = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
substrate-test-runtime-client = { version = "2.0.0", path = "../substrate-test-runtime-client" }
substrate-test-runtime = { version = "2.0.0", path = "../substrate-test-runtime" }
sp-tracing = { version = "6.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-service = { version = "0.10.0-dev", default-features = false, features = ["test-helpers"],  git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
tokio = "1.25.0"
