[package]
name = "subspace-test-service"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-system = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
futures = "0.3.25"
rand = "0.8.5"
pallet-balances = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
pallet-transaction-payment = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-client-api = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-consensus-slots = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-executor = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-network = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-network-common = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sc-service = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3", default-features = false }
sc-tracing = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-arithmetic = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-blockchain = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-keyring = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
sp-runtime = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
subspace-networking = { path = "../../crates/subspace-networking" }
subspace-runtime-primitives = { path = "../../crates/subspace-runtime-primitives" }
subspace-service = { path = "../../crates/subspace-service" }
subspace-test-client = { path = "../subspace-test-client" }
subspace-test-runtime = { version = "0.1.0", features = ["do-not-enforce-cost-of-storage"], path = "../subspace-test-runtime" }
subspace-transaction-pool = { path = "../../crates/subspace-transaction-pool" }
substrate-test-client = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
tokio = "1.23.0"

[dev-dependencies]
sc-cli = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3", default-features = false }
sp-keyring = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
substrate-test-utils = { git = "https://github.com/rahulksnv/substrate", branch = "rsub/subspace-v3" }
tempfile = "3.3.0"
