[package]
name = "domain-client-consensus-relay-chain"
description = "The relay-chain provided consensus algorithm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.64"
parking_lot = "0.12.1"
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-runtime = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
substrate-prometheus-endpoint = { git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
