[package]
name = "domain-client-executor-gossip"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3.26"
parity-scale-codec = { version = "3.4.0", features = ["derive"] }
parking_lot = "0.12.1"
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network-gossip = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-domains = { version = "0.1.0", path = "../../../crates/sp-domains" }
sp-runtime = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
tracing = "0.1.37"
