[package]
name = "domain-test-service"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
	"/src",
	"/Cargo.toml",
]

[dependencies]
async-trait = "0.1.64"
cross-domain-message-gossip = { version = "0.1.0", path = "../../client/cross-domain-message-gossip" }
domain-client-consensus-relay-chain = { version = "0.1.0", path = "../../client/consensus-relay-chain" }
domain-client-executor = { version = "0.1.0", path = "../../client/domain-executor" }
domain-service = { version = "0.1.0", path = "../../service" }
domain-test-runtime = { version = "0.1.0", path = "../runtime" }
futures = "0.3.26"
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
rand = "0.8.5"
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a", default-features = false }
sc-tracing = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-arithmetic = { version = "6.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-domains = { version = "0.1.0", path = "../../../crates/sp-domains" }
sp-keyring = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
sp-runtime = { version = "7.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a", default-features = false }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
subspace-networking = { path = "../../../crates/subspace-networking" }
subspace-runtime-primitives = { version = "0.1.0", path = "../../../crates/subspace-runtime-primitives" }
subspace-service = { version = "0.1.0", path = "../../../crates/subspace-service" }
subspace-test-client = { version = "0.1.0", path = "../../../test/subspace-test-client" }
subspace-test-runtime = { version = "0.1.0", path = "../../../test/subspace-test-runtime" }
subspace-test-service = { version = "0.1.0", path = "../../../test/subspace-test-service" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/subspace/substrate", branch = "rsub/relay-bench-a" }
tokio = { version = "1.25.0", features = ["macros"] }
tracing = "0.1.37"
